Fix input width and legend alignment for mobile
On Firefox, the legend wasn't centered properly despite having
'text-align: center'. The float change fixes its alignment.

The media-query prevents the input text box from overflowing on
mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@
 }
 
 .fieldset__legend {
+  float: right;
   text-align: center;
 }
 
@@ -104,6 +105,12 @@
   padding: 0.6rem;
   text-align: center;
   font-size: 1rem;
+}
+
+@media (max-width: 576px) {
+  .fieldset__input-text {
+    max-width: 13rem;
+  }
 }
 
 .table {
